--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
         <h2 hidden class="hidden-header">section2 header</h2>
         <ul class="feature-list list">
           <li>
+            <div class="feature-list-icons">
+              <svg class="feature-icons" width="64px" height="64px">
+                <use href="./images/icons.svg#icon-antenna"></use>
+              </svg>
+            </div>
             <h3 class="feature-tytle">Strategy</h3>
             <p class="feature-paragraph">
               Our goal is to identify the business problem to walk away with the
@@ -58,6 +63,11 @@
             </p>
           </li>
           <li>
+            <div class="feature-list-icons">
+              <svg class="feature-icons" width="64px" height="64px">
+                <use href="./images/icons.svg#icon-clock"></use>
+              </svg>
+            </div>
             <h3 class="feature-tytle">Punctuality</h3>
             <p class="feature-paragraph">
               Bring the key message to the brand's audience for the best price
@@ -65,6 +75,11 @@
             </p>
           </li>
           <li>
+            <div class="feature-list-icons">
+              <svg class="feature-icons" width="64px" height="64px">
+                <use href="./images/icons.svg#icon-diagram"></use>
+              </svg>
+            </div>
             <h3 class="feature-tytle">Diligence</h3>
             <p class="feature-paragraph">
               Research and confirm brands that present the strongest digital
@@ -72,6 +87,11 @@
             </p>
           </li>
           <li>
+            <div class="feature-list-icons">
+              <svg class="feature-icons" width="64px" height="64px">
+                <use href="./images/icons.svg#icon-astronaut"></use>
+              </svg>
+            </div>
             <h3 class="feature-tytle">Technologies</h3>
             <p class="feature-paragraph">
               Design practice focused on digital experiences. We bring forth a
@@ -105,23 +125,157 @@
         <ul class="team-list list">
           <li class="team-info">
             <img src="./images/image4.jpg" alt="MarkGuerrero" width="264" height="260" />
-            <h3 class="team-name">Mark Guerrero</h3>
-            <p class="team-job">Product Designer</p>
+            <div class="team-wrap">
+              <h3 class="team-name">Mark Guerrero</h3>
+              <p class="team-job">Product Designer</p>
+              <ul class="team-soc-list list">
+                <li class="team-soc-item"><a class="team-soc-link link" href>
+                    <svg class="team-icons" width="16px" height="16px">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a></li>
+                <li class="team-soc-item"><a class="team-soc-link link" href>
+                    <svg class="team-icons" width="16px" height="16px">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a></li>
+                <li class="team-soc-item"><a class="team-soc-link link" href>
+                    <svg class="team-icons" width="16px" height="16px">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a></li>
+                <li class="team-soc-item"><a class="team-soc-link link" href>
+                    <svg class="team-icons" width="16px" height="16px">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a></li>
+              </ul>
+            </div>
           </li>
           <li class="team-info">
             <img src="./images/image5.jpg" alt="TomFord" width="264" height="260" />
-            <h3 class="team-name">Tom Ford</h3>
-            <p class="team-job">Frontend Developer</p>
+            <div class="team-wrap">
+              <h3 class="team-name">Tom Ford</h3>
+              <p class="team-job">Frontend Developer</p>
+              <ul class="team-soc-list list">
+                <li class="team-soc-item"><a class="team-soc-link link" href>
+                    <svg class="team-icons" width="16px" height="16px">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a></li>
+                <li class="team-soc-item"><a class="team-soc-link link" href>
+                    <svg class="team-icons" width="16px" height="16px">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a></li>
+                <li class="team-soc-item"><a class="team-soc-link link" href>
+                    <svg class="team-icons" width="16px" height="16px">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a></li>
+                <li class="team-soc-item"><a class="team-soc-link link" href>
+                    <svg class="team-icons" width="16px" height="16px">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a></li>
+              </ul>
+            </div>
           </li>
           <li class="team-info">
             <img src="./images/image6.jpg" alt="CamilaGarcia" width="264" height="260" />
-            <h3 class="team-name">Camila Garcia</h3>
-            <p class="team-job">Marketing</p>
+            <div class="team-wrap">
+              <h3 class="team-name">Camila Garcia</h3>
+              <p class="team-job">Marketing</p>
+              <ul class="team-soc-list list">
+                <li class="team-soc-item"><a class="team-soc-link link" href>
+                    <svg class="team-icons" width="16px" height="16px">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a></li>
+                <li class="team-soc-item"><a class="team-soc-link link" href>
+                    <svg class="team-icons" width="16px" height="16px">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a></li>
+                <li class="team-soc-item"><a class="team-soc-link link" href>
+                    <svg class="team-icons" width="16px" height="16px">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a></li>
+                <li class="team-soc-item"><a class="team-soc-link link" href>
+                    <svg class="team-icons" width="16px" height="16px">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a></li>
+              </ul>
+            </div>
           </li>
           <li class="team-info">
             <img src="./images/image7.jpg" alt="DanielWilson" width="264" height="260" />
-            <h3 class="team-name">Daniel Wilson</h3>
-            <p class="team-job">UI Designer</p>
+            <div class="team-wrap">
+              <h3 class="team-name">Daniel Wilson</h3>
+              <p class="team-job">UI Designer</p>
+              <ul class="team-soc-list list">
+                <li class="team-soc-item"><a class="team-soc-link link" href>
+                    <svg class="team-icons" width="16px" height="16px">
+                      <use href="./images/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a></li>
+                <li class="team-soc-item"><a class="team-soc-link link" href>
+                    <svg class="team-icons" width="16px" height="16px">
+                      <use href="./images/icons.svg#icon-twitter"></use>
+                    </svg>
+                  </a></li>
+                <li class="team-soc-item"><a class="team-soc-link link" href>
+                    <svg class="team-icons" width="16px" height="16px">
+                      <use href="./images/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a></li>
+                <li class="team-soc-item"><a class="team-soc-link link" href>
+                    <svg class="team-icons" width="16px" height="16px">
+                      <use href="./images/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a></li>
+              </ul>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <!-- section 5 clients -->
+    <section class="clients">
+      <div class="container">
+        <h2 class="clients-tytle">Customers</h2>
+        <ul class="clients-list list">
+          <li class="clients-item">
+            <svg class="clients-icons" width="104px" height="56px">
+              <use href="./images/icons.svg#icon-logo-1"></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="clients-icons" width="104px" height="56px">
+              <use href="./images/icons.svg#icon-logo-2"></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="clients-icons" width="104px" height="56px">
+              <use href="./images/icons.svg#icon-logo-3"></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="clients-icons" width="104px" height="56px">
+              <use href="./images/icons.svg#icon-logo-4"></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="clients-icons" width="104px" height="56px">
+              <use href="./images/icons.svg#icon-logo-5"></use>
+            </svg>
+          </li>
+          <li>
+            <svg class="clients-icons" width="104px" height="56px">
+              <use href="./images/icons.svg#icon-logo-6"></use>
+            </svg>
           </li>
         </ul>
       </div>
@@ -129,13 +283,40 @@
   </main>
   <!-- footer -->
   <footer class="footer">
-    <div class="container">
-      <a href="./index.html" class="footer-logo-web link">Web<span
-          class="footer-logo-studio-white link">Studio</span></a>
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+    <div class="container footer-container">
+      <div class>
+        <a href="./index.html" class="footer-logo-web link">Web<span
+            class="footer-logo-studio-white link">Studio</span></a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with digital
+          marketing & growth solutions.
+        </p>
+      </div>
+      <div class="footer-soc">
+        <h2 class="footer-soc-tytle">Social media</h2>
+        <ul class="footer-soc-list list">
+          <li class="footer-soc-item"><a class="footer-soc-link link" href>
+              <svg class="team-icons" width="16px" height="16px">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a></li>
+          <li class="footer-soc-item"><a class="footer-soc-link link" href>
+              <svg class="team-icons" width="16px" height="16px">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a></li>
+          <li class="footer-soc-item"><a class="footer-soc-link link" href>
+              <svg class="team-icons" width="16px" height="16px">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a></li>
+          <li class="footer-soc-item"><a class="footer-soc-link link" href>
+              <svg class="team-icons" width="16px" height="16px">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a></li>
+        </ul>
+      </div>
     </div>
   </footer>
 </body>
