--- a/portfolio.html
+++ b/portfolio.html
@@ -132,13 +132,40 @@
   </main>
   <!-- footer -->
   <footer class="footer">
-    <div class="container">
-      <a href="./index.html" class="footer-logo-web link">Web<span
-          class="footer-logo-studio-white link">Studio</span></a>
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+    <div class="container footer-container">
+      <div class>
+        <a href="./index.html" class="footer-logo-web link">Web<span
+            class="footer-logo-studio-white link">Studio</span></a>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with digital
+          marketing & growth solutions.
+        </p>
+      </div>
+      <div class="footer-soc">
+        <h2 class="footer-soc-tytle">Social media</h2>
+        <ul class="footer-soc-list list">
+          <li class="footer-soc-item"><a class="footer-soc-link link" href>
+              <svg class="team-icons" width="16px" height="16px">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a></li>
+          <li class="footer-soc-item"><a class="footer-soc-link link" href>
+              <svg class="team-icons" width="16px" height="16px">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a></li>
+          <li class="footer-soc-item"><a class="footer-soc-link link" href>
+              <svg class="team-icons" width="16px" height="16px">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a></li>
+          <li class="footer-soc-item"><a class="footer-soc-link link" href>
+              <svg class="team-icons" width="16px" height="16px">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a></li>
+        </ul>
+      </div>
     </div>
   </footer>
 </body>
