--- a/index.html
+++ b/index.html
@@ -247,35 +247,35 @@
       <div class="container">
         <h2 class="clients-tytle">Customers</h2>
         <ul class="clients-list list">
-          <li class="clients-item">
-            <svg class="clients-icons" width="104px" height="56px">
-              <use href="./images/icons.svg#icon-logo-1"></use>
-            </svg>
+          <li class="clients-item"><a href="" class="clients-link link"> <svg class="clients-icons" width="104px"
+                height="56px">
+                <use href="./images/icons.svg#icon-logo-1"></use>
+              </svg></a>
           </li>
-          <li>
-            <svg class="clients-icons" width="104px" height="56px">
-              <use href="./images/icons.svg#icon-logo-2"></use>
-            </svg>
+          <li class="clients-item"><a href="" class="clients-link link"> <svg class="clients-icons" width="104px"
+            height="56px">
+            <use href="./images/icons.svg#icon-logo-2"></use>
+          </svg></a>
           </li>
-          <li>
-            <svg class="clients-icons" width="104px" height="56px">
-              <use href="./images/icons.svg#icon-logo-3"></use>
-            </svg>
+          <li class="clients-item"><a href="" class="clients-link link"> <svg class="clients-icons" width="104px"
+            height="56px">
+            <use href="./images/icons.svg#icon-logo-3"></use>
+          </svg></a>
           </li>
-          <li>
-            <svg class="clients-icons" width="104px" height="56px">
-              <use href="./images/icons.svg#icon-logo-4"></use>
-            </svg>
+          <li class="clients-item"><a href="" class="clients-link link"> <svg class="clients-icons" width="104px"
+            height="56px">
+            <use href="./images/icons.svg#icon-logo-4"></use>
+          </svg></a>
           </li>
-          <li>
-            <svg class="clients-icons" width="104px" height="56px">
-              <use href="./images/icons.svg#icon-logo-5"></use>
-            </svg>
+          <li class="clients-item"><a href="" class="clients-link link"> <svg class="clients-icons" width="104px"
+            height="56px">
+            <use href="./images/icons.svg#icon-logo-5"></use>
+          </svg></a>
           </li>
-          <li>
-            <svg class="clients-icons" width="104px" height="56px">
-              <use href="./images/icons.svg#icon-logo-6"></use>
-            </svg>
+          <li class="clients-item"><a href="" class="clients-link link"> <svg class="clients-icons" width="104px"
+            height="56px">
+            <use href="./images/icons.svg#icon-logo-6"></use>
+          </svg></a>
           </li>
         </ul>
       </div>
@@ -296,22 +296,22 @@
         <h2 class="footer-soc-tytle">Social media</h2>
         <ul class="footer-soc-list list">
           <li class="footer-soc-item"><a class="footer-soc-link link" href>
-              <svg class="team-icons" width="16px" height="16px">
+              <svg class="team-icons" width="24px" height="24px">
                 <use href="./images/icons.svg#icon-instagram"></use>
               </svg>
             </a></li>
           <li class="footer-soc-item"><a class="footer-soc-link link" href>
-              <svg class="team-icons" width="16px" height="16px">
+              <svg class="team-icons" width="24px" height="24px">
                 <use href="./images/icons.svg#icon-twitter"></use>
               </svg>
             </a></li>
           <li class="footer-soc-item"><a class="footer-soc-link link" href>
-              <svg class="team-icons" width="16px" height="16px">
+              <svg class="team-icons" width="24px" height="24px">
                 <use href="./images/icons.svg#icon-facebook"></use>
               </svg>
             </a></li>
           <li class="footer-soc-item"><a class="footer-soc-link link" href>
-              <svg class="team-icons" width="16px" height="16px">
+              <svg class="team-icons" width="24px" height="24px">
                 <use href="./images/icons.svg#icon-linkedin"></use>
               </svg>
             </a></li>
